# MLOps-Gun-Detection

./: .gitignore  README.md  main.py  pyproject.toml
config/: README.md  data_ingestion_config.py
notebook/: README.md  gun-object-detection.ipynb
src/: README.md  data_ingestion.py  data_processing.py  model_architecture.py  model_training.py
tensorboard_logs/20251020-123635/: events.out.tfevents.1760960195.DESKTOP-EOUIBMS.17940.0
tensorboard_logs/20251020-124153/: events.out.tfevents.1760960513.DESKTOP-EOUIBMS.4520.0
tensorboard_logs/20251020-131559/: events.out.tfevents.1760962559.DESKTOP-EOUIBMS.7388.0
tensorboard_logs/20251020-134011/: events.out.tfevents.1760964011.DESKTOP-EOUIBMS.23196.0
tensorboard_logs/20251020-134140/: events.out.tfevents.1760964100.DESKTOP-EOUIBMS.17016.0
tensorboard_logs/20251020-134210/: events.out.tfevents.1760964130.DESKTOP-EOUIBMS.18456.0
tensorboard_logs/20251020-134742/: events.out.tfevents.1760964462.DESKTOP-EOUIBMS.9260.0
tensorboard_logs/20251020-134915/: events.out.tfevents.1760964555.DESKTOP-EOUIBMS.8652.0
tensorboard_logs/20251020-135013/: events.out.tfevents.1760964613.DESKTOP-EOUIBMS.16184.0
tensorboard_logs/20251020-141425/: events.out.tfevents.1760966065.DESKTOP-EOUIBMS.12744.0
